# New-Medicine-Dev-AI-Competition

./: README.md  pyproject.toml
data/original/: train.csv
docs/: 각각의 feature 선택.md  모델링.md  전략2.md  타겟값인 IRAK4와 nM에 대한 기본적인 이해.md  팀공유.md
documents/: 1. 도메인지식.md  2. 데이터셋 및 피처 이해.md  전략.md  전략2.md
example/: ChemBERT를_활용한 코드 일부 _ public 51위 private 21위.ipynb  [신약개발1회] ChemBERT를_활용한 코드 일부 _ public 51위 private 21위.ipynb  [신약개발1회] DeepChem을_이용한 MPNN 학습.ipynb  [신약개발1회] GNN을_이용한 예측 PB_30.434.ipynb  [신약개발1회] [Private_35th] GAT_GCN_Net.ipynb  [신약개발1회] pytorch_GCN(graph convolutional network) + Tabnet End-to-End.ipynb  [신약개발2회] baseline.ipynb  chembl_col_visual.ipynb  new_feature.ipynb
legacy/: Try1-3-1.ipynb
preprocessed_data/: test1.csv
preprocessed_data/chembl_data/: test_with_descriptors.csv
preprocessed_data/rdkit_data/: rdkit_test_corr_0.3.csv  rdkit_train.csv  rdkit_train_corr_0.4.csv
shared/: 팀원공유코드 이해.md
shared/Data_Preprocessing/: 1. RDKit Descriptors 으로 새로운 피처 추출.ipynb  3. 상관계수 기반 피처 필터링(0.4) + 범주형 피처 제거.ipynb  4. 상관계수 기반 피처 필터링(Top7).ipynb
shared/Modeling/: 2. [Public 0.58] 상관계수 0.4 이상_타겟 pIC50.ipynb  3. [Public 0.6] 상관계수 0.45 이상_타겟 pIC50.ipynb  (+1 more)
src/: MPNN_Deepchem.ipynb  Try1-2.ipynb  Try1-2.md  Try1-3-2_GCN_tf.ipynb  Try1.ipynb  [Public 0.5] RDKitCorr45_ChemBertEmbedding_ChemBert-MLP.ipynb  [Public 0.629] Corr45_Pycaret_RamdomCV_Ensemble.ipynb  [Public 0.629] RDKitCorr45_Pycaret_ML_Ensemble(Blending).ipynb  [Public 0.629] pycaret_corr45.ipynb  calculate_score.ipynb
submission/: RDKitCorr45_ChemBERTEmbed_ChemBERT_MLP.csv  pycaret_corr45_submit.csv
(+34 files in other folders)
