[tool.poetry]
name = "nm-comp"
version = "0.1.0"
description = ""
authors = ["taehwan heo <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.2"
numpy = "^2.1.1"
rdkit = "^2024.3.5"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
